Simplify stream collection.